Add mechanism allowing to embed fixed settings as a resource
https://tomeko.net/software/SIPclient/howto/branding.php

--- a/tSIP/resource.rc
+++ b/tSIP/resource.rc
@@ -8,3 +8,6 @@ STRINGTABLE
     ID_STR_APP_URL              "https://tomeko.net/software/SIPclient/"
 }
 
+
+ID_RCDATA_FIXED_SETTINGS RCDATA "FixedSettings.json"
+
